TestSuite/PascalABCTests/errors/err0147.pas
var s : set of byte;
begin
readln(s);
end.